upload ảnh và sửa cv.html

--- a/c1124l1/cv.html
+++ b/c1124l1/cv.html
@@ -7,7 +7,16 @@
 <body>
 
 <h1>CV Nguyễn Quốc Việt</h1>
-<img src="./img/" alt="">
+<img src="./img/myavt.jpg" alt="my avt">
+<p>Họ và tên: Nguyễn Quốc Việt</p>
+<p>Địa chỉ: Hà nội</p>
+<p>Sđt: 0969999904</p>
+<p>Email: vietnq2001@gmail.com</p>
+<p>Học vấn: Đại học</p>
+<p>Bằng cấp: khum</p>
+<p>Kĩ năng: khum</p>
+<p>Kinh nghiệm: khum</p>
+<p>Định hướng phát triển bản thân: Lập trình viên backend</p>
 
 </body>
 </html>
