--- a/b6/trong /ThucHanh5.2.html
+++ b/b6/trong /ThucHanh5.2.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Thuc Hanh 5.2</title>
 </head>
 <body>
-$END$
+
+<form action="https://www.google.com/">
+    <input type="text" name="q" value="momo">
+    <button type="submit">tim kiem</button>
+</form>
+
 </body>
 </html>
