--- a/b6/trong /BaiTap5.2.html
+++ b/b6/trong /BaiTap5.2.html
@@ -1,10 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>bai tap 5.2</title>
 </head>
 <body>
-$END$
+<fieldset>
+    <legend>SỞ THÍCH CỦA BẠN</legend>
+        <form action="" style="font-family: Lucida Grande">
+            Họ và tên
+            <input type="text"><br><br>
+            email
+            <input type="email"><br><br>
+            <fieldset>
+                <legend>sở thích</legend>
+                <input type="checkbox" name="hobby" >Thể thao
+                <input type="checkbox" name="hobby" >Âm nhạc
+                <input type="checkbox" name="hobby" >Đọc sách <br>
+                <input type="checkbox" name="hobby" >Lướt web
+                <input type="checkbox" name="hobby" >Chơi game
+                <input type="checkbox" name="hobby" >Điện ảnh <br>
+                <input type="checkbox" name="hobby" >Du lịch
+            </fieldset>
+            <input type="submit" value="gửi thông tin">
+            <input type="reset" value="Nhập lại">
+        </form>
+</fieldset>
+
+<fieldset>
+    <legend>ĐĂNG KÝ HỌC VIÊN</legend>
+    <form action="" style="font-family: Lucida Grande">
+        Họ và tên
+        <input type="text" name="name"><br>
+        Ngày sinh
+        <input type="date" name="birthday"><br>
+        Giới tinh <br>
+        <input type="radio" name="gender" >Nam
+        <input type="radio" name="gender" >Nữ <br>
+        Lớp
+        <select name="class">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select> <br>
+        Email
+        <input type="email" name="email"> <br>
+        Điện thoại
+        <input type="tel" name="phone"> <br>
+        <input type="submit" value="Đăng ký">
+        <input type="reset" value="Nhập lại">
+    </form>
+</fieldset>
+
 </body>
 </html>
