--- a/b6/trong /BaiTap5.4.html
+++ b/b6/trong /BaiTap5.4.html
@@ -1,10 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>bai tao 5.4</title>
+    <style>
+        .flex-container {
+            display: flex;
+            justify-content: space-around;
+        }
+    </style>
 </head>
 <body>
-$END$
+
+<h1>Thời khoá biểu lớp T0908I</h1>
+<table border="1">
+    <tr>
+    <td>Thứ 3</td>
+    <td>Thứ 5</td>
+    <td>Thứ 7</td>
+    </tr>
+    <tr>
+    <td>CF-T1,L1</td>
+    <td>CF-T2,L2</td>
+    <td>CF-T3,L3</td>
+    </tr>
+    <tr>
+    <td>CF-T4-L4</td>
+    <td>CF-Written Test</td>
+    <td>C-T1,L1</td>
+    </tr>
+</table>
+
+<h1 style="color: blue">Thời khoá Biểu</h1>
+
+<div class="flex-container" style="color: blue">
+    <div>Lớp:T0908I</div>
+    <div></div>
+    <div></div>
+    <div>Thời gian Học: 13h30-17h30</div>
+</div>
+<div class="flex-container" style="color: blue">
+    <div>Giáo viên: Khoa NV</div>
+    <div></div>
+    <div></div>
+    <div>Ngày học: Thứ 3,5,7</div>
+</div>
+<div class="flex-container" style="color: blue">
+    <div>Phòng học: Class3/Lab3</div>
+    <div></div>
+    <div></div>
+    <div></div>
+</div>
+<table border="2" >
+    <tr>
+        <td colspan="3"></td>
+        <td bgcolor="yellow">Thứ 3</td>
+        <td bgcolor="yellow">Thứ 5</td>
+        <td bgcolor="yellow">Thứ 7</td>
+    </tr>
+    <tr bgcolor="orange">
+        <td>Tuần</td>
+        <td>Ngày bắt đầu</td>
+        <td>Ngày kết thúc</td>
+        <td colspan="3" >Môn học</td>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>01/09/2009</td>
+        <td>05/09/2009</td>
+        <td>CF-T1,L1</td>
+        <td>CF-T2,L2</td>
+        <td>CF-T3,L3</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>08/09/2009</td>
+        <td>12/09/2009</td>
+        <td>CF-T4-L4</td>
+        <td>CF-Written Test</td>
+        <td>C-T1,L1</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+    </tr>
+</table>
+
 </body>
 </html>
