--- a/b6/trong /BaiTap5.5.html
+++ b/b6/trong /BaiTap5.5.html
@@ -1,10 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>bai tap 5.5</title>
+    <style >
+        sub{
+            color: black;
+        }
+        .sun{
+            color: red;
+        }
+        .sat{
+            color: blue;
+        }
+    </style>
 </head>
 <body>
-$END$
+
+<h1>Đây là bàn cờ</h1>
+<table border="1 solid black">
+    <tr>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+    </tr>
+    <tr>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+    </tr>
+    <tr>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+    </tr>
+    <tr>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+    </tr>
+    <tr>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+    </tr>
+    <tr>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+    </tr>
+    <tr>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+    </tr>
+    <tr>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+        <td width="50" height="50" bgcolor="black"></td>
+        <td width="50" height="50" bgcolor="white"></td>
+    </tr>
+</table>
+
+<h1>Đây là cuốn lịch</h1>
+<table border="1 solid black">
+    <tr>
+        <td class="sun">C.Nhật</td>
+        <td>T.Hai</td>
+        <td>T.Ba</td>
+        <td>T.Bốn</td>
+        <td>T.Năm</td>
+        <td>T.Sáu</td>
+        <td class="sat">T.Bảy</td>
+    </tr>
+    <tr>
+        <td class="sun">Sun</td>
+        <td>Mon</td>
+        <td>Tue</td>
+        <td>Wed</td>
+        <td>Thur</td>
+        <td>Fri</td>
+        <td class="sat">Sat</td>
+    </tr>
+    <tr>
+        <td class="sun"></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>1<sub>13</sub></td>
+        <td>2<sub>14</sub></td>
+        <td class="sat">3<sub>15</sub></td>
+    </tr>
+    <tr>
+        <td class="sun">4<sub>16</sub></td>
+        <td>5<sub>17</sub></td>
+        <td>6<sub>18</sub></td>
+        <td>7<sub>19</sub></td>
+        <td>8<sub>20</sub></td>
+        <td>9<sub>21</sub></td>
+        <td class="sat">10 <sub>22</sub></td>
+    </tr>
+    <tr>
+        <td class="sun">11 <sub>23</sub> </td>
+        <td>12 <sub>24</sub></td>
+        <td>13 <sub>25</sub></td>
+        <td>14 <sub>26</sub></td>
+        <td>15 <sub>27</sub></td>
+        <td>16 <sub>28</sub></td>
+        <td class="sat">17 <sub>29</sub></td>
+    </tr>
+    <tr>
+        <td class="sun">18 <sub>1.9</sub></td>
+        <td>19 <sub>2</sub></td>
+        <td>20 <sub>3</sub></td>
+        <td>21 <sub>4</sub></td>
+        <td>22 <sub>5</sub></td>
+        <td>23 <sub>6</sub></td>
+        <td class="sat">24 <sub>7</sub></td>
+    </tr>
+    <tr>
+        <td class="sun">25 <sub>8</sub></td>
+        <td>26 <sub>9</sub></td>
+        <td>27 <sub>10</sub></td>
+        <td>28 <sub>11</sub></td>
+        <td>29 <sub>12</sub></td>
+        <td>30 <sub>13</sub></td>
+        <td class="sat">31 <sub>14</sub></td>
+    </tr>
+</table>
+
 </body>
 </html>
