--- a/b6/trong /ThucHanh5.4.html
+++ b/b6/trong /ThucHanh5.4.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>bai thuc hanh 5.4</title>
 </head>
-<body>
-$END$
+<h2> Thời Khóa Biểu</h2>
+<table border="1">
+    <tr>
+        <th rowspan=2>Thứ</th>
+        <th colspan=2>Hoạt động</th>
+    </tr>
+    <tr>
+        <th>Sáng</th>
+        <th>Chiều</th>
+    </tr>
+    <tr>
+        <td>Thứ 2</td>
+        <td>Thể dục</td>
+        <td>HD trò chơi mới</td>
+    </tr>
+    <tr>
+        <td>Thứ 3</td>
+        <td>Nhận biết tập nói</td>
+        <td>Rèn nề nếp,kỹ năng sống</td>
+    </tr>
+    <tr>
+        <td>Thứ 4</td>
+        <td>Âm Nhạc </td>
+        <td>Vui chơi</td>
+    </tr>
+    <tr>
+        <td>Thứ 5</td>
+        <td>Văn Học</td>
+        <td>Nhận Biết các giá trị sống</td>
+    </tr>
+</table>
 </body>
 </html>
