--- a/b6/trong /tablesimple.html
+++ b/b6/trong /tablesimple.html
@@ -2,11 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>bai thuc hanh 5.3</title>
 </head>
 <body>
 
-<input type="range" name="score" id="score" value="50" min="0" max="100">
+<table border="1">
+    <tr>
+        <th>company</th>
+        <th>contact</th>
+        <th>country</th>
+    </tr>
+    <tr>
+        <td>Alfreds Futterkste</td>
+        <td>Maria Anders</td>
+        <td>Germany</td>
+    </tr>
+    <tr>
+        <td>Centro comercial Moctezuma	</td>
+        <td>Francisco Chang	</td>
+        <td>Mexico</td>
+    </tr>
+    <tr>
+        <td>Ernst Handel</td>
+        <td>Roland Mendel	</td>
+        <td>Austria</td>
+    </tr>
+    <tr>
+        <td>Island Trading	</td>
+        <td>Helen Bennett	</td>
+        <td>UK</td>
+    </tr>
+    <tr>
+        <td>Laughing Bacchus Winecellars	</td>
+        <td>Yoshi Tannamuri	</td>
+        <td>Canada</td>
+    </tr>
+    <tr>
+        <td>Magazzini Alimentari Riuniti	</td>
+        <td>Giovanni Rovelli	</td>
+        <td>Italy</td>
+    </tr>
+</table>
+
+
 
 </body>
 </html>
