update bai tap buoi 7 lesson 6

--- a/b7/BaiTap/ThucHanh6.2.html
+++ b/b7/BaiTap/ThucHanh6.2.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <title>bai thuc hanh 6.2</title>
 </head>
+<script src="./ThucHanh6.2.js"></script>
 <body>
 
-<button id="button" onclick="showMessage()">click here</button>
+<button type="button" id="nut-so-1" onclick="showMessage()">click here</button>
 <script>
     function showMessage() {
         alert('nhúng JavaScript');
     }
 </script>
+
 
 </body>
 </html>
